--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 server.port=7000
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/person_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/free_lunch_db?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
