--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+server.port=${SERVER_PORT}
 
+# Database connection settings
+spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/free_lunch_db?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
+
+# Hibernate settings
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+
+# Swagger Docs
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Sendinblue Mail Configuration
+mail.api.key=${sendinblue_api}
+sendinblue.mail.url=${sendinblue_mail}
+sendinblue.mail.email=${SENDINBLUE_USERNAME}
+sendinblue.mail.name=${SENDINBLUE_NAME}
+
+# Cloudinary
+cloudinary_name=${CLOUDINARY_NAME}
+cloudinary_api_secret=${CLOUDINARY_API_SECRET}
+cloudinary_api_key=${CLOUDINARY_API_KEY}
+
+# Brevo
+brevo_api_key=${BREVO_API_KEY}
+api_url=${API_URL}
+
+jwt-expiration=4320
