--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,74 +1,63 @@
-<<<<<<< HEAD
-spring.profiles.active=dev
-server.port=7000
+#
+#spring.profiles.active=dev
+#server.port=7000
+#
+## Database connection settings
+#spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/person_db?createDatabaseIfNotExist=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=${db.username}
+#spring.datasource.password=${db.password}
+#
+## Hibernate settings
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=false
+#
+## Swagger Docs
+#springdoc.swagger-ui.filter=true
+#springdoc.swagger-ui.tagsSorter=alpha
+#springdoc.swagger-ui.path=/swagger-ui.html
+#
+## Sendinblue Mail Configuration
+#mail.api.key=${sendinblue_api}
+#sendinblue.mail.url=${sendinblue_mail}
+#sendinblue.mail.email=${SENDINBLUE_USERNAME}
+#sendinblue.mail.name=${SENDINBLUE_NAME}
+#
+## Cloudinary
+#cloudinary_name=${CLOUDINARY_NAME}
+#cloudinary_api_secret=${CLOUDINARY_API_SECRET}
+#cloudinary_api_key=${CLOUDINARY_API_KEY}
+#
+## Brevo
+#brevo_api_key=${BREVO_API_KEY}
+#api_url=${API_URL}
+#
 
-# Database connection settings
-spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/person_db?createDatabaseIfNotExist=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${db.username}
-spring.datasource.password=${db.password}
 
-# Hibernate settings
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+# dummy database
+spring.datasource.url=jdbc:postgresql://localhost:5433/liquid-food
+spring.datasource.username=postgres
+spring.datasource.password=13589695@Bb
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
-
-# Swagger Docs
-springdoc.swagger-ui.filter=true
-springdoc.swagger-ui.tagsSorter=alpha
-springdoc.swagger-ui.path=/swagger-ui.html
-
-# Sendinblue Mail Configuration
-mail.api.key=${sendinblue_api}
-sendinblue.mail.url=${sendinblue_mail}
-sendinblue.mail.email=${SENDINBLUE_USERNAME}
-sendinblue.mail.name=${SENDINBLUE_NAME}
-
-# Cloudinary
-cloudinary_name=${CLOUDINARY_NAME}
-cloudinary_api_secret=${CLOUDINARY_API_SECRET}
-cloudinary_api_key=${CLOUDINARY_API_KEY}
-
-# Brevo
-brevo_api_key=${BREVO_API_KEY}
-api_url=${API_URL}
-
-=======
-spring.profiles.active=dev
-server.port=7000
-
-# Database connection settings
-spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/free_lunch_db?createDatabaseIfNotExist=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${db.username}
-spring.datasource.password=${db.password}
-
-# Hibernate settings
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
+spring.application.name=banking-services-backend
+server.port=8080
 
-# Swagger Docs
-springdoc.swagger-ui.filter=true
-springdoc.swagger-ui.tagsSorter=alpha
-springdoc.swagger-ui.path=/swagger-ui.html
 
-# Sendinblue Mail Configuration
-mail.api.key=${sendinblue_api}
-sendinblue.mail.url=${sendinblue_mail}
-sendinblue.mail.email=${SENDINBLUE_USERNAME}
-sendinblue.mail.name=${SENDINBLUE_NAME}
+brevo_api_key="{BREVO_API_KEY}"
+api_url="{API_URL}"
 
-# Cloudinary
-cloudinary_name=${CLOUDINARY_NAME}
-cloudinary_api_secret=${CLOUDINARY_API_SECRET}
-cloudinary_api_key=${CLOUDINARY_API_KEY}
 
-# Brevo
-brevo_api_key=${BREVO_API_KEY}
-api_url=${API_URL}
+cloudinary_name="{CLOUDINARY_NAME}"
+cloudinary_api_secret="{CLOUDINARY_API_SECRET}"
+cloudinary_api_key="{CLOUDINARY_API_KEY}"
 
-jwt-expiration=4320
->>>>>>> 37617686d864be3d5717d47a2fb029fe19dd3361
+
+mail.api.key="{sendinblue_api}"
+sendinblue.mail.url="{sendinblue_mail}"
+sendinblue.mail.email="{SENDINBLUE_USERNAME}"
+sendinblue.mail.name="{SENDINBLUE_NAME}"
