added url prefix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ brevo_api_key=${BREVO_API_KEY}
 api_url=${API_URL}
 
 jwt-expiration=4320
+
+# Application Url Prefix
+url_prefix= "https://liquid-food-backend-production.up.railway.app/"
