--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=${SERVER_PORT}
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/free_lunch_db
+spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/${db.name}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
