--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=${db.password}
 
 # Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_FORMAT}
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
@@ -34,3 +34,5 @@ url_prefix=${URL_PREFIX}
 # Brevo
 brevo_api_key=${BREVO_API_KEY}
 api_url=${API_URL}
+
+Jwt_Secret_Key=${SECRET_KEY}
