restored back changes i made in the property file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 server.port=${SERVER_PORT}
 
 # Database connection settings
-
 spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/${db.name}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=liquid
-#spring.datasource.password=0liquid0
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
 
 # Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -37,4 +36,3 @@ brevo_api_key=${BREVO_API_KEY}
 api_url=${API_URL}
 
 Jwt_Secret_Key=${SECRET_KEY}
-
