--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-server.port=${SERVER_PORT}
-
 # Database connection settings
-spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/${db.name}
+spring.datasource.url=jdbc:mysql://localhost:3306/lunch
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${db.username}
-spring.datasource.password=${db.password}
+spring.datasource.username=root
+spring.datasource.password=password
 
 # Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=${HIBERNATE_FORMAT}
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
@@ -35,4 +33,3 @@ url_prefix=${URL_PREFIX}
 brevo_api_key=${BREVO_API_KEY}
 api_url=${API_URL}
 
-Jwt_Secret_Key=${SECRET_KEY}
