--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
+server.port=${SERVER_PORT}
+
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/lunch
+spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/${db.name}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
 
 # Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_FORMAT}
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
