--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,10 @@ sendinblue.mail.url=${sendinblue_mail}
 sendinblue.mail.email=${SENDINBLUE_USERNAME}
 sendinblue.mail.name=${SENDINBLUE_NAME}
 
+server.mail.host=smtp.gmail.com
+server.mail.port=587
+server.mail.username=liquid.freelunch@gmail.com
+server.mail.password=lxcswhkprjtfwnsl
 # Cloudinary
 cloudinary_name=${CLOUDINARY_NAME}
 cloudinary_api_secret=${CLOUDINARY_API_SECRET}
